fix: hide logo before it overlaps the tabs #20

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -16,7 +16,7 @@
     top: 8px;
     right: 8px;
   }
-  @media screen and (max-width: 624px) {
+  @media screen and (max-width: 860px) {
     .heading__img {
       display: none;
     }
